# citation-verifier

./: .gitignore  CITATION.cff  CLAUDE.md  CONFIDENTIALITY.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  pages.yml
examples/: refs.json
src/citeverify/: __init__.py  __main__.py  cli.py  lookup.py  scoring.py  verify.py
tests/: test_cli.py  test_lookup.py  test_scoring.py  test_verify.py
web/: index.html
