[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "citation-verifier"
dynamic = ["version"]
description = "Check that references exist and their metadata matches, across CrossRef, OpenAlex, and Semantic Scholar."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Oliver S. Crocco" }]
keywords = [
    "citations",
    "references",
    "research integrity",
    "reproducibility",
    "hallucination",
    "crossref",
    "openalex",
    "semantic scholar",
    "open science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = ["requests>=2.31"]

[project.urls]
Homepage = "https://github.com/WarderHouse/citation-verifier"
Repository = "https://github.com/WarderHouse/citation-verifier"

[project.scripts]
citeverify = "citeverify.cli:main"

[tool.hatch.version]
path = "src/citeverify/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/citeverify"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["citeverify"]

[dependency-groups]
dev = ["pytest>=9.1.1", "ruff>=0.15.22"]
